fix: z-index adjustments

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -192,7 +192,7 @@ blockquote {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 1071;
+  z-index: 1072;
 }
 
 .bd-titlebar {
